# xdg-content-chooser

./: .gitignore  Makefile.am  README.md  cc-content-chooser.c  cc-content-chooser.gresource.xml  cc-content-chooser.h  cc-main.c  configure.ac  content-chooser.ui  org.freedesktop.portal.ContentPortal.service.in  org.freedesktop.portal.content.xml  xdp-dbus.c  xdp-dbus.h  xdp-error.c  xdp-error.h  xdp-main.c  xdp-resources.c  xdp-util.c
